hphp/hack/test/decl/classname.php
<?hh

class Foo {
}

enum E: string {
  FOO = Foo::class;
}
